--- a/style.css
+++ b/style.css
@@ -218,7 +218,7 @@ text-align: center !important;
   cursor: pointer;
   height: 48px;
   width: 2px;
-  margin: 12px 0px;
+  margin: 6px 0px;
   background-color: rgb(120, 120, 120);
   border-radius: 35px;
   display: block;
@@ -226,6 +226,7 @@ text-align: center !important;
 }
 .dot:hover{
   transition: 0.6s ease;
+  height: 62px;
 }
 /* The dots/bullets/indicators */
 .dot2 {
@@ -437,7 +438,7 @@ margin-top: 160px;
 }
 
 .content .secondaryfont{
-  padding-right: 13.5rem;
+  padding-right: 220px;
 }
 /*tes*/
 .example-desc {
@@ -475,7 +476,7 @@ margin-top: 160px;
 }
 
 .tab{
-  padding: 0 33rem;
+  padding: 0 520px;
   text-align: center;
 }
 .tab h2{
@@ -785,7 +786,7 @@ color: black;
 .icon-bar a {
   display: block;
   text-align: center;
-  padding: 16px 12px;
+  padding: 12px 12px;
   transition: all 0.3s ease;
   color: white;
   font-size: 20px;
@@ -793,7 +794,6 @@ color: black;
 
 /* Style the social media icons with color, if you want */
 .icon-bar a:hover {
-  font-size: 24px;
   padding: 24px 12px;
 }
 
@@ -856,7 +856,11 @@ color: black;
   .titlecircle.last2{
     margin-top: 4.5px;
   }
-  .rectangle{
+  .rectangle, .rectangle1, .rectangle2, .rectangle3, .rectangle4, .rectangle5{
+    z-index: -5;
+  }
+  .rectangle{  
+    
     width: 100%;
     height: 75px;
     bottom: 0;
